--- a/src/scss/base/b_btn.scss
+++ b/src/scss/base/b_btn.scss
@@ -9,6 +9,10 @@ a.btn {
     background: transparent;
     padding: 10px 30px;
     cursor: pointer;
+
+    @include media-breakpoint-down(sm) {
+        width: 100%
+    }
     
     &--white {
         border: solid $bd-width-3 $c-white;
